# sntrup761

./: Cargo.toml  README.md
.github/workflows/: sntrup.yml
benches/: mod.rs
src/: error.rs  lib.rs  r3.rs  rq.rs  utils.rs  zx.rs
src/r3/: mod3.rs  vector.rs
src/rq/: encoding.rs  modq.rs  vector.rs
tests/: mod.rs
